--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 apache-airflow==2.8.1
 google-cloud-storage==3.1.0
 google-cloud-bigquery==3.34.0
-google-cloud-pubsub==2.22.0
+google-cloud-pubsub==2.29.0
 apache-beam[gcp]==2.65.0
 pandas==2.2.3
+apache-airflow[gcp]
+dbt-bigquery==1.9.2
